Have instance API endpoint return the list of active git/config SHAs for marathon and kubernetes services. PAASTA-17026 and PAASTA-16329
